--- a/src/routes/users-list/users-list.styles.scss
+++ b/src/routes/users-list/users-list.styles.scss
@@ -7,7 +7,7 @@
   &__item {
     display: grid;
     grid-template-columns: 55px 1fr 60px;
-    grid-template-rows: 65px;
+    grid-template-rows: minmax(65px 1fr);
     grid-gap: 1px;
     margin-bottom: 25px;
 
